# Aiotest

./: .gitignore  404.html  ARCHITECTURE.md  Aiotest.json  AiotestExporter.json  Dockerfile  LICENSE  MANIFEST.in  NodeExporter.json  README.md  docker-compose-local.yml  docker-compose-master.yml  docker-compose-worker.yml  docker-compose.yml  dockerignore  index.html  jenkinsfile  mkdocs.yml  objects.inv  prometheus.yml  pyproject.toml  pytest.ini  pytest_run.py  requirements.txt  search.html  stop_rm.sh
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml
aiotest/: __init__.py  __main__.py  cli.py  client.py  clients.py  distributed_coordinator.py  events.py  exception.py  load_shape_manager.py  log.py  logger.py  main.py  metrics.py  runner_factory.py  runners.py  shape.py  state_manager.py  stats_exporter.py  task_manager.py  user.py  user_manager.py  users.py
aiotest/examples/: add_events.py  add_logger.py  basic.py  custom_wait_time.py  distributed_test.py  multiple_user_classes.py  name_property.py  semaphore.py
aiotest/rpc/: protocol.py  zmqrpc.py
aiotest/static/: index.html
aiotest/test/: conftest.py  log.py  setting.py  test_client.py  test_main.py  test_rpc.py  test_runner.py  test_user.py
api/: index.html
command-line-options/: index.html
custom-load-shape/: index.html
docs/: API_REFERENCE.md  BEST_PRACTICES.md  CLIENTS_MODULE_DOC.md  CLI_MODULE_DOC.md  DISTRIBUTED_COORDINATOR_MODULE_DOC.md  EVENTS_MODULE_DOC.md  EXAMPLES.md  EXCEPTION_MODULE_DOC.md  FAQ.md  LOAD_SHAPE_MANAGER_MODULE_DOC.md  LOGGER_MODULE_DOC.md  MAIN_MODULE_DOC.md  METRICS_MODULE_DOC.md  README.md  RUNNERS_MODULE_DOC.md  RUNNER_FACTORY_MODULE_DOC.md  SHAPE_MODULE_DOC.md  STATE_MANAGER_MODULE_DOC.md  TASK_MANAGER_MODULE_DOC.md  USERS_MODULE_DOC.md  USER_MANAGER_MODULE_DOC.md  api.md  command-line-options.md  custom-load-shape.md  events-hooks.md  index.md  installation.md  prometheus-grafana.md  quickstart.md  running-distributed.md  running-in-command-line.md  running-in-docker.md  seckill-semaphore-wait.md  testing-other-systems.md  what-is-aiotest.md  writing-a-aiotestfile.md
events-hooks/: index.html
examples/: README.md  add_events.py  basic.py  concurrent_example.py  distributed_example.py  events_example.py  get_data_from_redis.py  prepare_user_data.py  request_verification.py  seckill_scenario.py  semaphore.py  stepwise_pressure_shape.py  weight_and_wait.py
examples/demo/: TEST_DEMO.md  aiotestfile.py  deploy.py  docker-compose.yml  dockerignore  prepare_user_data.py  prometheus.yml  requirements.txt  userinfo.csv
examples/demo/provisioning/dashboards/: Aiotest.json  NodeExporter.json  dashboards.yml
examples/load_shape/: peak_load_shape.py  random_load_shape.py  step_soad_shape.py  wave_load_shape.py
installation/: index.html
prometheus-grafana/: index.html
quickstart/: index.html
running-distributed/: index.html
running-in-command-line/: index.html
running-in-docker/: index.html
search/: search_index.json
seckill-semaphore-wait/: index.html
testing-other-systems/: index.html
tests/: __init__.py  conftest.py  http_server.py  https_server.py  run_test.py  test_cli.py  test_clients.py  test_distributed_coordinator.py  test_events.py  test_exception.py  test_load_shape_manager.py  test_logger.py  test_main.py  test_metrics.py  test_runner_factory.py  test_runners.py  test_shape.py  test_state_manager.py  test_task_manager.py  test_user_manager.py  test_users.py
what-is-aiotest/: index.html
writing-a-aiotestfile/: index.html
