[project]
name = "aiotest"
version = "1.0.0"
description = "基于 asyncio 的高性能负载测试框架"
authors = [
    { name = "hewei", email = "hewei1987@163.com" },
]
dependencies = [
    "redis>=4.5.0",
    "aiohttp>=3.8.0",
    "prometheus-client>=0.17.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (use line-length instead)
]